# DualCellQuant

./: .gitignore  README.md  TWO_TAB_UI_COMPLETE.md  _tmp_check_peaks.py  cellpose_2image_masks_app.py  cellpose_app.py  dualCellQuant.py  pyproject.toml  serve.py
docs/superpowers/plans/: 2026-05-29-radial-profile-pixels.md
dualcellquant/: __init__.py  core.py  radial.py  ui.py  ui_callbacks_radialprofile.py  ui_callbacks_stepbystep.py  visualization.py
examples/: 0.0_Z003_cell_masks.tif  README.md  batch_processing.ipynb  run_reproduction_pipeline.ipynb  run_reproduction_pipeline_for_anal.sci.2026.ipynb
test/: Create_mask_from_2images.py  batch_processing_stepbystep.ipynb  test_peak_diff.py
