[tool.poetry]
name = "dualcellquant"
version = "1.0.0"
description = ""
authors = ["fuji3to4 <sfujii@bio.kyutech.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = ">=2.8,<3.0"
torchvision = ">=0.23,<1.0"
cellpose = "^4.0.6"
gradio = "5.43.1"
pandas = "^2.3.1"
scipy = "^1.16.1"
scikit-image = "^0.25.2"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
tabulate = "^0.9.0"



[[tool.poetry.source]]
name = "torch_cu129"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
