[project]
name = "dualcellquant"
version = "1.0.1"
description = ""
authors = [{ name = "fuji3to4", email = "sfujii@bio.kyutech.ac.jp" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26,<2.0",
    "torch>=2.8,<3.0",
    "torchvision>=0.23,<1.0",
    "cellpose>=4.0.6,<5",
    "gradio>=5.43.1,<6",
    "pandas>=2.3.1,<3",
    "scipy>=1.16.1,<2",
    "scikit-image>=0.25.2,<1",
    "fastapi>=0.116.1,<0.117",
    "uvicorn[standard]>=0.35.0,<0.36",
    "matplotlib>=3.9.2,<4",
    "jupyter>=1.1.1,<2",
    "tabulate>=0.9.0,<0.10",
    "dinov3",
]

[[tool.uv.index]]
name = "torch_cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "torch_cu130" }
torchvision = { index = "torch_cu130" }
dinov3 = { git = "https://github.com/facebookresearch/dinov3" }

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
